changed grid styling to the whole page to fix lining up layout issues

--- a/styles/credits.css
+++ b/styles/credits.css
@@ -39,6 +39,8 @@ table {
 }
 
 h3 {
+    color: #ffff00;
+    text-decoration: none;
     margin: 0 auto;
 }
 
