--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,6 +132,11 @@ h2 {
     padding: 0 1rem;
 }
 
+h3 {
+    color: #004e2f;
+    text-decoration: underline #004e2f;
+}
+
 p {
     padding: 0 1rem;
 }
@@ -155,80 +160,52 @@ figure {
 
 @media(min-width: 40em) {
     .site-wrap {
-        max-width: 60%;
-    }
-
-    .container, .places {
+        max-width: 75rem;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: auto auto;
+        grid-template-columns: minmax(auto, 37.5rem) minmax(auto, 37.5rem);
+        grid-template-rows: auto;
         gap: 1rem;
-        margin: 1rem auto;
+        justify-content: center;
     }
 
-    .places {
-        grid-template-rows: 1fr 1fr 1fr;
+    .article,
+    .top-left,
+    .middle-left,
+    .low-left,
+    .eat {
+        grid-column: 1/2;
     }
 
-    .article {
-        grid-column: 1/3;
-        grid-row: 1/3;
+    .tram,
+    .top-right,
+    .middle-right,
+    .low-right,
+    .stay {
+        grid-column: 2/3;
     }
 
-    video, .tram {
-        grid-column: 3/5;
-        grid-row: 1/3;
+    .article, .tram {
+        grid-row: 1/2;
+    }
+
+    .top-left, .top-right {
+        grid-row: 2/3;
+    }
+
+    .middle-left, .middle-right {
+        grid-row: 3/4;
+    }
+
+    .low-left, .low-right {
+        grid-row: 4/5;
+    }
+
+    .eat, .stay {
+        grid-row: 5/6;
     }
 
     figure {
-        float: none;
-        margin: 0 auto;
-        width: 100%;
-    }
-
-    .right {
-        grid-column: 3/5;
-        grid-row: 1/2;
-    }
-
-    .roo {
-        grid-column: 1/3;
-        grid-row: 2/3;
-    }
-
-    .right-bottom {
-        grid-column: 3/5;
-        grid-row: 2/3;
-    }
-
-    .article-head {
-        grid-column: 1/3;
-        grid-row: 1/2;
-    }
-
-    .top-right {
-        grid-column: 3/5;
-        grid-row: 1/2;
-    }
-
-    .middle-left {
-        grid-column: 1/3;
-        grid-row: 2/3;
-    }
-
-    .middle-right {
-        grid-column: 3/5;
-        grid-row: 2/3;
-    }
-
-    .low-left {
-        grid-column: 1/3;
-        grid-row: 3/4;
-    }
-
-    .low-right {
-        grid-column: 3/5;
-        grid-row: 3/4;
+        object-fit: cover;
     }
 
     figcaption {
@@ -257,7 +234,6 @@ form {
 }
 
 /* Footer */
-/* No idea why, but it looks fine on the home page, but messed up on Melbourne and Sydney even though the code is the same. */
 .footer a {
     background-color: #008651;
     padding: 0;
